--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Html5</title>
-</head>
-<body>
-    HEllO HTML5
-</body>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>HTML template</title>
+  </head>
+  <body>
+    <header>This is a sample website</header>
+    <nav>
+      <ul>
+        <li><a href="https://www.google.com">Google</a></li>
+        <li><a href="https://www.facebook.com">Facebook</a></li>
+      </ul>
+    </nav>
+    <section>
+        <h1>I am a Header</h1> <br>
+        <h6>I am a Header</h1> <br>
+    </section>
+    <section>
+        <img src="asset\images\gunner.png"/>
+        <img src="https://picsum.photos/300/400"/>
+    </section>
+    <section>
+       <div style="border: solid #cc8042 3px ;">Hello React</div>
+       <div>Hello React</div>
+        <br>
+       <span style="border: solid #1CCCCe 3px ;">Hello React</span>
+       <span>Hello React</span>
+       <br>
+    </section>
+    <footer>This is a sample of a footer</footer>
+  </body>
 </html>
